--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,11 +31,28 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        continue-on-error: false
 
       - name: Build
         run: npm run build
         env:
           NODE_ENV: production
+          GITHUB_REPOSITORY: ${{ github.repository }}
+        continue-on-error: false
+      
+      - name: Verify build output
+        run: |
+          if [ ! -d "out" ]; then
+            echo "❌ Build failed - out directory not found"
+            echo "Checking for build errors..."
+            ls -la
+            exit 1
+          fi
+          echo "✅ Build successful - out directory created"
+          echo "📦 Build contents:"
+          ls -la out/ | head -20
+          echo "📊 Total size:"
+          du -sh out/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
