--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -30,7 +30,8 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci || (echo "⚠️ npm ci failed, regenerating lock file..." && npm install)
         continue-on-error: false
 
       - name: Build
